{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 76,
  "lineage": "83cb32d1-b798-6042-60af-fc631ac3d350",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fabb4ac6b2e3df19",
            "arn": "arn:aws:ec2:us-east-2:740155412766:elastic-ip/eipalloc-0fabb4ac6b2e3df19",
            "association_id": "eipassoc-0e651ab8cdde4a632",
            "domain": "vpc",
            "id": "eipalloc-0fabb4ac6b2e3df19",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0af80ef5ea87fe311",
            "private_dns": "ip-20-24-1-229.us-east-2.compute.internal",
            "private_ip": "20.24.1.229",
            "public_dns": "ec2-3-146-215-251.us-east-2.compute.amazonaws.com",
            "public_ip": "3.146.215.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050cd642fd83388e4",
            "arn": "arn:aws:ec2:us-east-2:740155412766:instance/i-0eadd4c27e6ce14f0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eadd4c27e6ce14f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082d6c56b69dc8932",
            "private_dns": "ip-20-24-0-249.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.24.0.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b516189dd672baf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e22e601d09b406c9",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "private-instance-01"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "private-instance-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00826e4c05d0811b0"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050cd642fd83388e4",
            "arn": "arn:aws:ec2:us-east-2:740155412766:instance/i-094774183d98ae53f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094774183d98ae53f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bec01ff17e23ff38",
            "private_dns": "ip-20-24-1-158.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.24.1.158",
            "public_ip": "3.142.201.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a4d04a2297ec8ffe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0721948ddb037b487",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "public-instance-01"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "public-instance-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00826e4c05d0811b0",
              "sg-046ec7bae2a8d1963"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_security_group.ssh-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:internet-gateway/igw-07b1cf87ad26ccc6c",
            "id": "igw-07b1cf87ad26ccc6c",
            "owner_id": "740155412766",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "main-igw"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "main-igw"
            },
            "vpc_id": "vpc-04cb0fefbd18e0ebb"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fabb4ac6b2e3df19",
            "association_id": "eipassoc-0e651ab8cdde4a632",
            "connectivity_type": "public",
            "id": "nat-01265a2c57680e4ac",
            "network_interface_id": "eni-0af80ef5ea87fe311",
            "private_ip": "20.24.1.229",
            "public_ip": "3.146.215.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0721948ddb037b487",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "main-nat-gateway"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "main-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:route-table/rtb-0bc4fd59dabffaa48",
            "id": "rtb-0bc4fd59dabffaa48",
            "owner_id": "740155412766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01265a2c57680e4ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "private-route-table"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cb0fefbd18e0ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.main-nat-gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:route-table/rtb-080d063730846b802",
            "id": "rtb-080d063730846b802",
            "owner_id": "740155412766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b1cf87ad26ccc6c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "public-route-table"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cb0fefbd18e0ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1bc8a6625cf872f",
            "route_table_id": "rtb-0bc4fd59dabffaa48",
            "subnet_id": "subnet-0e22e601d09b406c9"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.main-nat-gateway",
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0696ad6f5d86a1b2b",
            "route_table_id": "rtb-080d063730846b802",
            "subnet_id": "subnet-0721948ddb037b487"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:security-group/sg-046ec7bae2a8d1963",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046ec7bae2a8d1963",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-sg",
            "name_prefix": "",
            "owner_id": "740155412766",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "http-sg"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cb0fefbd18e0ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:security-group/sg-00826e4c05d0811b0",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00826e4c05d0811b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "740155412766",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "ssh-sg"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cb0fefbd18e0ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:subnet/subnet-0e22e601d09b406c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.24.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e22e601d09b406c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740155412766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "private-subnet"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-04cb0fefbd18e0ebb"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:subnet/subnet-0721948ddb037b487",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.24.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0721948ddb037b487",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740155412766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "public-subnet"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-04cb0fefbd18e0ebb"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:740155412766:vpc/vpc-04cb0fefbd18e0ebb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.24.0.0/16",
            "default_network_acl_id": "acl-06c03620821b9a6f3",
            "default_route_table_id": "rtb-0f0bd61d2041820d7",
            "default_security_group_id": "sg-0acfae6d78d3c5095",
            "dhcp_options_id": "dopt-09201dcd4a73a0cf3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04cb0fefbd18e0ebb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0bd61d2041820d7",
            "owner_id": "740155412766",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "main-vpc"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}